[gd_scene load_steps=5 format=3 uid="uid://cibmbc10eurgn"]

[ext_resource type="Script" uid="uid://v7xd22btncl2" path="res://scripts/carrot_projectile.gd" id="1_lbvvf"]
[ext_resource type="Texture2D" uid="uid://bvnvktmhmfw" path="res://sprites/General Tiles/carrot.png" id="2_lbvvf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cjyle"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lbvvf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lbvvf"]
size = Vector2(13, 6)

[node name="Carrot" type="Area2D"]
collision_layer = 16
collision_mask = 5
script = ExtResource("1_lbvvf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, 0)
scale = Vector2(0.611328, 0.611328)
sprite_frames = SubResource("SpriteFrames_cjyle")
autoplay = "default"
frame_progress = 0.312359

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_lbvvf")

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]
